# pe-score

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pe-score-web.html  pyproject.toml  server.py
examples/: quick_start.py
pe_score/: __init__.py  cli.py  dimensions.py  scorer.py  weights.py
tests/: test_scorer.py
