[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-score"
version = "0.1.0"
description = "Data-driven PE investment scoring framework — 7 dimensions, 35 sub-indicators, backtested on 31 Chinese PE/VC cases (ρ=0.864)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ma Zichang"},
]
keywords = ["private-equity", "investment", "scoring", "due-diligence", "VC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5", "scipy>=1.7"]
dev = ["pytest>=7.0", "scipy>=1.7"]

[project.scripts]
pe-score = "pe_score.cli:main"

[tool.setuptools.packages.find]
include = ["pe_score*"]
